# unciv-ai-training

./: .gitignore  404.html  HANDOFF.md  build.gradle.kts  index.html  sitemap.xml
.feature-workflow/: cleanup-opportunities.md  codebase-map-cost.jsonl
Credits/: index.html
Developers/Building-Locally/: index.html
Developers/Coding-standards/: index.html
Developers/From-code-to-deployment/: index.html
Developers/Game-Making-Tips/: index.html
Developers/Map-rendering/: index.html
Developers/Project-structure-and-major-classes/: index.html
Developers/Saved-games-and-transients/: index.html
Guiding-Principles/: index.html
Privacy-Policy/: index.html
desktop/: build.gradle.kts
docs/: next-feature-v8-unit-intent.md
gradle/: libs.versions.toml
next-feature-v8-unit-intent/: index.html
python/: README.md  analyze_v73rep.py  analyze_v8.py  pyproject.toml  run_acceptance.sh  run_v5.sh  run_v6.sh  run_v7.sh  run_v72eff.sh  run_v73eff.sh  run_v73rep.sh  run_v74bc.sh  run_v74kl.sh  run_v8bc.sh  run_v8kl.sh
python/tests/: test_behavior_logp_shard.py  test_clip_eps_guard.py  test_continual_resume.py  test_contract_failloud.py  test_determinism.py  test_hexgraph.py  test_microbatch.py  test_offpolicy_equivalence.py  test_parity.py  test_reader.py  test_replay_noop.py  test_replay_resume.py  test_structured_attn.py  test_structured_smoke.py  test_structured_train.py  test_train_dataset.py  test_v2_units.py  test_v7_construction.py  test_v8_unit_intent.py
python/unciv_dataplane/: __init__.py  reader.py  schema.py
python/unciv_train/: CONTRACT.md  MAP.md  __init__.py  analyze.py  analyze_v5.py  analyze_v6.py  analyze_v7.py  contract.py  dataset.py  export_onnx.py  features.py  hexgraph.py  model.py  run_loop.py  train.py
search/: search_index.json
(+328 files in other folders)
