[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "unciv-selfplay"
version = "0.1.0"
description = "Self-play data plane reader (unciv_dataplane) + REINFORCE training loop (unciv_train) for Unciv."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["unciv_dataplane", "unciv_train"]

[tool.pytest.ini_options]
# A stale pytest-asyncio in the base interpreter breaks collection; disable it (these tests are sync).
addopts = "-p no:asyncio"
testpaths = ["tests", "unciv_train"]
